  on failure indepdendently from the fatality mode.  This is meant for internal
  use with the pEp Engine test suite, but users and developers of other pEp
  components might also find this useful.
  This solves https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/121 .
* documentation: mention do_sync_protocol_init , previously forgottem, in the
  NEWS entry for v3.2.0-RC20 (2023-01-23).

v3.2.0-RC20  2023-01-23
* make register_sync_callbacks really side-effect-free; this fixes
  https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/116 (Thanks to
  Heck.)  This contributes to unblock
  https://gitea.pep.foundation/pEp.foundation/pEpJNIAdapter/issues/24 .
* In relation to the change above: new API function do_sync_protocol_init ,
  which initialises the Sync state machinery indepdendently from
  register_sync_callbacks (which now *only* sets callback functions).
* undo recent Makefile changes related to Sequoia: a cleaner solution is
  forthcoming.

v3.2.0-RC19  2023-01-18
* The logging facility can now enabled and disabled from a configuration
  function, the new API function
    DYNAMIC_API void config_enable_log(PEP_SESSION session, bool enable)
  .  By default logging is now disabled, unless the environment variable PEP_LOG
  is defined to any value.
  This solves https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/100
* sql_reliability: remove debugging prints, replace with more generally useful
  messages.

v3.2.0-RC18  2023-01-18
* Fix https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/90 : it is
  now possible to open multiple concurrent threads with a database logging
  destination.
  No user-visible changes, other than more reliability.
* Make SQL transactions robust by not assuming, incorrectly, that COMMIT
  TRANSACTION or ROLLBACK TRANSACTION never fail with SQLITE_BUSY or
  SQLITE_LOCKED inside an EXCLUSIVE tranaction.  This improves
  https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/104