@@ -32,6 +32,8 @@
   This solves https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/121 .
 * documentation: mention do_sync_protocol_init , previously forgottem, in the
   NEWS entry for v3.2.0-RC20 (2023-01-23).
+* Fix https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/107 : no
+  longer prematurely free identity list in update_identity.
 
 v3.2.0-RC20  2023-01-23
 * make register_sync_callbacks really side-effect-free; this fixes
